@@ -2,6 +2,12 @@
 
 	Backported from mainline
 	2016-04-13  Jakub Jelinek  <jakub@redhat.com>
+ 
+	PR middle-end/70633
+	* gimplify.c (gimplify_init_constructor): Clear TREE_STATIC if
+	gimplification turns some element into non-constant.
+
+	2016-04-13  Jakub Jelinek  <jakub@redhat.com>
 
 	PR debug/70628
 	* explow.c (convert_memory_address_addr_space_1): Formatting fix.
